LPS-48899 Uniform alert message styling

--- a/portal-web/docroot/html/css/portal/generic_portal.css
+++ b/portal-web/docroot/html/css/portal/generic_portal.css
@@ -103,7 +103,7 @@ img.icon {
 }
 
 .alert-block {
-	&.popup-alert-notice, &.popup-alert-warning {
+	&.popup-alert-notice, &.popup-alert-warning, &.taglib-portal-message {
 		left: 0;
 		line-height: 30px;
 		padding: 9px 14px;
@@ -115,7 +115,7 @@ img.icon {
 		@include respond-to(phone, tablet) {
 			line-height: 20px;
 			margin-bottom: 0;
-			padding: 14px;
+			padding: 14px 28px;
 			position: static;
 
 			@include respond-to(phone) {
