--- a/portal-web/docroot/html/themes/_styled/css/extras.css
+++ b/portal-web/docroot/html/themes/_styled/css/extras.css
@@ -328,7 +328,7 @@ body > .lfr-menu-list ul, .active-area-proxy, .entry-display-style .entry-thumbn
 	@include border-radius(0);
 }
 
-.site-variations-tabview-list .tab-content, .staging-tabview-list .tab-active .tab-content, .tagselector-content .textboxlistentry-holder .lfr-tag-selector-input:focus {
+.site-variations-tabview-list .tab-content, .staging-tabview-list .tab-active .tab-content, .tagselector-content .textboxlistentry-holder .lfr-tag-selector-input:focus, .alloy-editor-toolbar .yui3-button {
 	@include box-shadow(none);
 }
 
