--- a/portal-web/docroot/html/themes/_styled/css/application.css
+++ b/portal-web/docroot/html/themes/_styled/css/application.css
@@ -444,15 +444,17 @@
 /* ---------- Modals ---------- */
 
 .aui {
-	&.dialog-iframe-root-node #main-content {
-		bottom: 0;
-		left: 0;
-		overflow: auto;
-		padding: 20px;
-		position: absolute;
-		right: 0;
-		top: 0;
-		-webkit-overflow-scrolling: touch;
+	.dialog-iframe-popup {
+		> #main-content, > #wrapper {
+			bottom: 0;
+			left: 0;
+			overflow: auto;
+			padding: 20px;
+			position: absolute;
+			right: 0;
+			top: 0;
+			-webkit-overflow-scrolling: touch;
+		}
 	}
 
 	.modal {
@@ -475,8 +477,8 @@
 	}
 }
 
-.modal-open body {
-	position: fixed;
+.modal-open {
+	overflow: hidden;
 }
 
 /* ---------- Loading mask ---------- */
