--- a/portal-web/docroot/html/taglib/aui/form/init-ext.jspf
+++ b/portal-web/docroot/html/taglib/aui/form/init-ext.jspf
@@ -21,6 +21,6 @@ if (themeDisplay.isAddSessionIdToURL()) {
 	action = PortalUtil.getURLWithSessionId(action, themeDisplay.getSessionId());
 }
 
-List<String> checkboxNames = (List<String>)request.getAttribute("aui:form:checkboxNames");
+List<String> checkboxNames = (List<String>)request.getAttribute(WebKeys.CHECKBOX_NAMES);
 Map<String, List<ValidatorTag>> validatorTagsMap = (Map<String, List<ValidatorTag>>)request.getAttribute("aui:form:validatorTagsMap");
 %>
