--- a/modules/test/poshi-runner/src/main/resources/META-INF/resources/css/_error-log.scss
+++ b/modules/test/poshi-runner/src/main/resources/META-INF/resources/css/_error-log.scss
@@ -7,7 +7,7 @@
 	&.toggle {
 		max-height: 0;
 		transform: translate(calc(-100% + 4%));
-		transition: transform 0.2s ease, visibility 0s 0.15s, max-height 0s 0.15s;
+		transition: transform 0.2s ease, max-height 0s 0.15s, visibility 0s 0.15s;
 		visibility: hidden;
 		will-change: initial;
 	}
@@ -26,7 +26,7 @@
 	max-height: 100%;
 	padding: 14px 52px 56px;
 	transform-origin: top left;
-	transition: transform 0.15s ease, visibility 0s, max-height 0s;
+	transition: transform 0.15s ease, max-height 0s, visibility 0s;
 	will-change: transform;
 	word-wrap: break-word;
 	z-index: 900;
